@@ -1,4 +1,7 @@
 
+2009-03-18  9:30 Ali aliov@xfce.org 
+	 * : Check carefully if a new added device is a new battery device(hald always duplicated udi for devices)
+
 2009-03-18  8:47 Ali aliov@xfce.org 
 	 * : Added Inhibit interface+monitor ScreenSaver Inhibit messages to catch inhibition and inhibit xfpm
 
